<resources>
    <string name="app_name">ElvisAI</string>
    <string name="elvisai">ElvisAI</string>
    <string name="welcome_to">Dobrodošli u</string>
    <string name="button">Pronađi pjesmu</string>
    <string name="glazba_bez_promid_be">Glazba bez promidžbe</string>
    <string name="naziv_pjesme_stringbuilder">Naziv pjesme - Izvođač<br/>Album - Godina</string>
    <string name="pronadi_novu_pjesmu">Pronađi novu pjesmu</string>
    <string name="nz_pjesme_plain">Naziv pjesme:</string>
    <string name="izvodac_plain">Izvođač:</string>
    <string name="album_plain">Album:</string>
    <string name="godina_plain">Godina:</string>
    <string name="pjesma_recomm">pjesma</string>
    <string name="izvodac_recomm">izvođač</string>
    <string name="album_recomm">album</string>
    <string name="godina_recomm">godina</string>
    <string name="spotify_link">Spotify link</string>
    <string name="render_next_song">Render next song</string>
    <string name="youtube_link">Youtube link</string>
    <string name="deezer_link">Deezer link</string>
    <string name="profile_calib">Napravi profil</string>
    <string name="thumbsupbutton">Thumbs Up Button</string>
    <string name="thumbsdownbutton">Thumbs Down Button</string>
    <string name="sretno_str">sretno</string>
    <string name="sad">tužno</string>
    <string name="chill">Opušteno</string>
    <string name="pumped">nabrijano</string>
    <string name="angry">ljuto</string>
    <string name="tired">umorno</string>
    <string name="howdoyoufeel">Kako se \nosjećaš?</string>
    <string name="howdoyoufeelstr">Kako se osjećaš?</string>
</resources>
